WIP: tree-operator tests

--- a/sample.env
+++ b/sample.env
@@ -15,6 +15,8 @@ APP_VALID_01=./test-files/00-app/valid/01.txt
 CLI_MANAGER_VALID_01=./test-files/01-cli-manager/valid/01.txt
 FILE_PARSER_VALID_01=./test-files/02-file-parser/valid/01.txt
 DIR_OPERATOR_VALID_01=./test-files/03-dir-operator/valid/01.txt
+DIR_OPERATOR_VALID_02=./test-files/03-dir-operator/valid/02.txt
+DIR_OPERATOR_VALID_03=./test-files/03-dir-operator/valid/03.txt
 
 # expected output for valid inputs for all modules
 APP_EXPECTED_VALID_01=./test-files/00-app/expected/valid/01.txt
