more dir-operator tests

--- a/sample.env
+++ b/sample.env
@@ -12,17 +12,24 @@ ERR_COMMAND_WITH_INVALID_NUM_ARGS="input file has a command with invalid number 
 # valid input for all modules
 # APP_VALID_01 --> this file is also loaded by default, overwriding the -f or --file-name cli argument
 APP_VALID_01=./test-files/00-app/valid/01.txt
+
 CLI_MANAGER_VALID_01=./test-files/01-cli-manager/valid/01.txt
+
 FILE_PARSER_VALID_01=./test-files/02-file-parser/valid/01.txt
+
 DIR_OPERATOR_VALID_01=./test-files/03-dir-operator/valid/01.txt
 DIR_OPERATOR_VALID_02=./test-files/03-dir-operator/valid/02.txt
 DIR_OPERATOR_VALID_03=./test-files/03-dir-operator/valid/03.txt
 
 # expected output for valid inputs for all modules
 APP_EXPECTED_VALID_01=./test-files/00-app/expected/valid/01.txt
+
 CLI_MANAGER_EXPECTED_VALID_01=./test-files/01-cli-manager/expected/valid/01.txt
+
 FILE_PARSER_EXPECTED_VALID_01=./test-files/02-file-parser/expected/valid/01.txt
+
 DIR_OPERATOR_EXPECTED_VALID_01=./test-files/03-dir-operator/expected/valid/01.txt
+DIR_OPERATOR_EXPECTED_VALID_02=./test-files/03-dir-operator/expected/valid/02.txt
 
 # INVALID input for all modules
 FILE_PARSER_INVALID_01=./test-files/02-file-parser/invalid/01.txt
@@ -35,3 +42,5 @@ DIR_OPERATOR_INVALID_02=./test-files/03-dir-operator/invalid/02.txt
 FILE_PARSER_EXPECTED_INVALID_01=./test-files/02-file-parser/expected/invalid/01.txt
 FILE_PARSER_EXPECTED_INVALID_02=./test-files/02-file-parser/expected/invalid/02.txt
 
+DIR_OPERATOR_EXPECTED_INVALID_01=./test-files/03-dir-operator/expected/invalid/01.txt
+DIR_OPERATOR_EXPECTED_INVALID_02=./test-files/03-dir-operator/expected/invalid/02.txt
