--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "dependencies": {
-    "commander": "^8.2.0",
-    "dotenv": "^10.0.0",
-    "pino": "^6.13.3"
-  },
-  "devDependencies": {
-    "jest": "^27.2.4",
-    "jest-extended": "^0.11.5",
-    "jest-test-performance": "^1.0.1",
-    "node-notifier": "^10.0.0"
-  },
-  "scripts": {
-    "test": "jest"
-  }
+ "dependencies": {
+  "commander": "^8.2.0",
+  "dotenv": "^10.0.0",
+  "pino": "^6.13.3"
+ },
+ "devDependencies": {
+  "@babel/core": "^7.16.0",
+  "@babel/plugin-proposal-class-properties": "^7.16.0",
+  "@babel/plugin-transform-runtime": "^7.16.4",
+  "@babel/preset-env": "^7.16.4",
+  "babel-jest": "^27.4.5",
+  "jest": "^27.4.5",
+  "jest-cli": "^27.4.5",
+  "jest-extended": "^1.2.0",
+  "jest-test-performance": "^1.0.1",
+  "node-notifier": "^10.0.0"
+ },
+ "scripts": {
+  "test": "jest"
+ }
 }
