--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,17 @@
 {
+ // Use IntelliSense to learn about possible attributes.
+ // Hover to view descriptions of existing attributes.
+ // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
  "version": "0.2.0",
  "configurations": [
   {
-   "name": "Debug Jest Tests",
-   "type": "node",
+   "type": "pwa-node",
    "request": "launch",
-   "runtimeArgs": [
-    "--inspect-brk",
-    "${workspaceRoot}/node_modules/jest/bin/jest.js",
-    "--runInBand"
+   "name": "Launch Program",
+   "skipFiles": [
+    "<node_internals>/**"
    ],
-   "webRoot": "${workspaceRoot}/src",
-   "justMyCode": true,
-   "console": "internalConsole",
-   "internalConsoleOptions": "neverOpen",
-   "port": 9229
+   "program": "${workspaceFolder}/directories.js"
   }
  ]
 }
