--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
  "name": "directory-tree",
+ "type": "module",
  "version": "1.0.0",
  "description": "",
  "main": "directories.js",
@@ -20,16 +21,12 @@
   "pino": "^6.13.3"
  },
  "devDependencies": {
-  "@babel/core": "^7.16.0",
-  "@babel/plugin-proposal-class-properties": "^7.16.0",
-  "@babel/plugin-transform-runtime": "^7.16.4",
-  "@babel/preset-env": "^7.16.4",
-  "babel-jest": "^27.4.5",
+  "@babel/plugin-transform-runtime": "^7.16.5",
+  "@babel/preset-env": "^7.16.5",
+  "@babel/runtime": "^7.16.5",
   "jest": "^27.4.5",
-  "jest-cli": "^27.4.5",
   "jest-extended": "^1.2.0",
-  "jest-test-performance": "^1.0.1",
-  "node-notifier": "^10.0.0"
+  "jest-test-performance": "^1.0.1"
  },
  "scripts": {
   "test": "jest"
