Add the CLInterface class + tests

--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ ERR_USER_INPUT_HAS_INVALID_COMMAND="input file has an invalid command"
 ERR_COMMAND_WITH_INVALID_NUM_ARGS="input file has a command with invalid number of arguments"
 
 # ==== test files
-# COMMAND_VALID_01 --> this file with commands is loaded by default
-# overwriting the -f or --file-name cli argument
+# this file is loaded by default
+# provide some testing commands
 COMMAND_VALID_01=./__tests__/Command/files/valid/01.txt
