CLI and App classes + README up to date

--- a/.env
+++ b/.env
@@ -9,5 +9,7 @@ ERR_COMMAND_WITH_INVALID_NUM_ARGS="input file has a command with invalid number 
 
 # ==== test files
 # this file is loaded by default
-# provide some testing commands
 COMMAND_VALID_01=./__tests__/Command/files/valid/01.txt
+# files with invalid input
+COMMAND_INVALID_01=./__tests__/Command/files/invalid/01.txt
+COMMAND_INVALID_02=./__tests__/Command/files/invalid/02.txt
