Typescript: Storage and Tree classes + tests

--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
  "name": "directory-tree",
- "type": "module",
  "version": "1.0.0",
  "description": "",
  "main": "directories.js",
+ "scripts": {
+  "test": "jest --setupFiles dotenv/config"
+ },
  "repository": {
   "type": "git",
   "url": "git+https://github.com/isaldarriaga/directory-tree.git"
  },
- "keywords": [],
- "author": "",
+ "author": "Ivan Saldarriaga",
  "license": "ISC",
  "bugs": {
   "url": "https://github.com/isaldarriaga/directory-tree/issues"
@@ -21,14 +22,11 @@
   "pino": "^6.13.3"
  },
  "devDependencies": {
-  "@babel/plugin-transform-runtime": "^7.16.5",
-  "@babel/preset-env": "^7.16.5",
-  "@babel/runtime": "^7.16.5",
+  "@types/jest": "^27.0.3",
   "jest": "^27.4.5",
   "jest-extended": "^1.2.0",
-  "jest-test-performance": "^1.0.1"
- },
- "scripts": {
-  "test": "jest --setupFiles dotenv/config"
+  "jest-test-performance": "^1.0.1",
+  "ts-jest": "^27.1.2",
+  "typescript": "^4.5.4"
  }
 }
